<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/Title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/sfu_red"
        android:fontFamily="@font/countach_bold"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="70sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.10" />

    <TextView
        android:id="@+id/applicationPickerTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/application_picker_string"
        android:textSize="20sp"
        android:fontFamily="@font/din_pro_condenced"
        app:layout_constraintTop_toBottomOf="@+id/guideline"
        app:layout_constraintBottom_toTopOf="@+id/applicationPicker"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <NumberPicker
        android:id="@+id/applicationPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:backgroundTint="@color/sfu_red"
        android:descendantFocusability="blocksDescendants"
        app:layout_constraintTop_toBottomOf="@+id/applicationPickerTitle"
        app:layout_constraintBottom_toTopOf="@+id/chooseModeTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/chooseModeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/choose_mode_string"
        android:textSize="20sp"
        android:fontFamily="@font/din_pro_condenced"
        app:layout_constraintTop_toBottomOf="@+id/applicationPicker"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/laymanOption"
        app:layout_constraintTop_toBottomOf="@+id/applicationPicker"
        app:layout_constraintBottom_toTopOf="@+id/liveModeCheckMark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RadioButton
            android:id="@+id/laymanOption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/sfu_primary"
            android:text="@string/simple_option_string"/>

        <RadioButton
            android:id="@+id/advancedOption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/sfu_primary"
            android:text="@string/advanced_option_string"/>

    </RadioGroup>

    <CheckBox
        android:id="@+id/liveModeCheckMark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/offline_mode_string"
        android:buttonTint="@color/sfu_primary"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65" />

    <Button
        android:id="@+id/runApplicationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/launch_application_button"
        android:textSize="23sp"
        android:backgroundTint="@color/sfu_primary"
        app:layout_constraintTop_toBottomOf="@+id/guideline2"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/information"
        android:layout_width="60dp"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/information_button_string"
        android:src="@android:drawable/ic_menu_info_details"
        app:layout_constraintStart_toEndOf="@+id/runApplicationButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline2"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        tools:ignore="ImageContrastCheck" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />

<!--    <androidx.constraintlayout.widget.ConstraintLayout-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="0dp"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/guideline3"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent">-->

<!--        <TextView-->
<!--            android:id="@+id/labTextView"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="60dp"-->
<!--            android:text="@string/lab_string"-->
<!--            android:textSize="30sp"-->
<!--            android:gravity="center"-->
<!--            android:fontFamily="@font/countach_regular"-->
<!--            app:layout_constraintTop_toTopOf="parent"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintEnd_toStartOf="@+id/guideline4"/>-->

<!--        <androidx.constraintlayout.widget.Guideline-->
<!--            android:id="@+id/guideline4"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:orientation="vertical"-->
<!--            app:layout_constraintGuide_percent="0.5" />-->

<!--        <TextView-->
<!--            android:id="@+id/sfuTextView"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="60dp"-->
<!--            android:layout_marginStart="5dp"-->
<!--            android:background="@color/sfu_red"-->
<!--            android:fontFamily="@font/d_din_pro_semibold"-->
<!--            android:gravity="end|bottom"-->
<!--            android:paddingEnd="2.5dp"-->
<!--            android:paddingStart="50dp"-->
<!--            android:paddingTop="20dp"-->
<!--            android:text="@string/school_string"-->
<!--            android:textColor="@color/white"-->
<!--            android:textSize="30sp"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintStart_toEndOf="@+id/guideline4"-->
<!--            app:layout_constraintTop_toTopOf="parent"-->
<!--            tools:ignore="RtlSymmetry" />-->

<!--    </androidx.constraintlayout.widget.ConstraintLayout>-->

</androidx.constraintlayout.widget.ConstraintLayout>