<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/Title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/sfu_red"
        android:fontFamily="@font/countach_bold"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="70sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/guideline" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.10" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewpager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        app:layout_constraintBottom_toTopOf="@+id/tab_layout" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/TabLayoutTheme"
        android:contentDescription="@string/tab_layout_description"
        app:tabTextAppearance="@style/TabLayoutTabTheme"
        app:tabGravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/textConstraintView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline2"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/analysisConstraint"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/textViewClass">

            <TextView
                android:id="@+id/simpleModeSignaturePositionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <Button
                android:id="@+id/analysisButton"
                android:text="@string/analysis_button_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/sfu_primary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageButton
            android:id="@+id/information"
            android:layout_width="60dp"
            android:layout_height="0dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/information_button_string"
            android:src="@android:drawable/ic_menu_info_details"
            app:layout_constraintStart_toEndOf="@+id/analysisConstraint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/textViewClass"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/textViewClass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/din_pro_condenced"
            android:gravity="center"
            android:textSize="22sp"
            app:layout_constraintTop_toBottomOf="@+id/analysisConstraint"
            app:layout_constraintBottom_toTopOf="@+id/textViewReconTime"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/textViewReconTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/din_pro_condenced"
            android:gravity="center"
            android:textSize="25sp"
            android:text="@string/reconstruction_time_string"
            app:layout_constraintTop_toBottomOf="@+id/textViewClass"
            app:layout_constraintBottom_toTopOf="@+id/textViewClassTime"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/textViewClassTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/din_pro_condenced"
            android:gravity="center"
            android:text="@string/classify_text"
            android:textSize="25sp"
            app:layout_constraintTop_toBottomOf="@+id/textViewReconTime"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="0dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.jjoe64.graphview.GraphView
        android:id="@+id/graphView"
        android:layout_width="match_parent"
        android:padding="20dp"
        android:layout_height="0dp"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@+id/guideline2"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>